# SpecDiff

./: .gitignore  EXPLICATIONS_ARCHITECTURE.txt  MODIFICATIONS_MDLM_REPO.txt  README.md  app.py  benchmark_utils.py  engine.py  pyproject.toml  requirements.txt  run.py  run_benchmark.py
configs/: gpt2xl_mdlm.yaml  gptneo125m_mdlm.yaml  gptneo_mdlm.yaml  redpajama_mdlm.yaml
dashboard/: app.py
experiments/: grid_search.py
specdiff/: __init__.py  config.py  registry.py
specdiff-analytics/: package-lock.json  package.json
specdiff-analytics/app/: globals.css  layout.tsx  page.tsx
specdiff-analytics/public/: data.csv  data2.csv
specdiff/engines/: __init__.py  autoregressive.py  speculative.py
specdiff/metrics/: __init__.py  tracker.py
specdiff/models/: __init__.py  base.py
specdiff/models/draft/: __init__.py  ar.py  mdlm.py
